# ElixirProject

./: README.md  mix.exs
lib/: elixir_client.ex  elixir_client_last.ex
native/elixirclient/: Cargo.toml  README.md
native/elixirclient/src/: lib.rs  nifs.rs
