[package]
name = "elixirclient"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "elixirclient"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.35.0", features = ["nif_version_2_17"] }

my_websocket_crate = { path = "../../../../../my_websocket_crate" } # DIPENDEZA AL MIO CRATE

# Import per gestire le NIFs creando un'istanza di runtime di Tokio globale
once_cell = "1.15"

# Dipendenze necessarie per il crate importato
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
tungstenite = "0.17"
futures-util = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }